New folder/open-interpreter/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1240
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                       Session                                         "
"  /        Commands             tab        Send message                         "
"  @        Mention files        shift+tab  Change mode                          "
"  !        Shell command        ⌥+,        Less reasoning                       "
"  ctrl+j   New line             ⌥+.        More reasoning                       "
"  ctrl+v   Paste image          ctrl+c     Quit                                 "
"  ctrl+g   External editor                                                      "
"  ctrl+r   Search history       Transcript (open first)                         "
"  esc esc  Edit last message    ctrl+t                 Open transcript          "
"                                f3                     Find text                "
"                                pgup / pgdn            Scroll                   "
"                                ctrl+space             Start selection          "
"                                ctrl+home / ctrl+end   Top / latest             "
"                                shift+⌥+, / shift+⌥+.  Top / latest             "
"                                                                                "
"  /keymap customize                                                             "
