New folder/open-interpreter/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_running.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1240
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                       Session                                         "
"  /        Commands             tab     Queue message                           "
"  @        Mention files        ⌥+,     Less reasoning                          "
"  !        Shell command        ⌥+.     More reasoning                          "
"  ctrl+j   New line             ctrl+c  Interrupt                               "
"  ctrl+v   Paste image                                                          "
"  ctrl+g   External editor      Transcript (open first)                         "
"  ctrl+r   Search history       ctrl+t                 Open transcript          "
"  esc esc  Edit last message    f3                     Find text                "
"                                pgup / pgdn            Scroll                   "
"                                ctrl+space             Start selection          "
"                                ctrl+home / ctrl+end   Top / latest             "
"                                shift+⌥+, / shift+⌥+.  Top / latest             "
"                                                                                "
"  /keymap customize                                                             "
